tests/snapshots/yaml_suite_snapshots__yaml_suite_RHX7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: YAML directive without document end marker
  from: "@perlpunk"
  tags: directive error
  fail: true
  yaml: "---\nkey: value\n%YAML 1.2\n---\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n"
