tests/snapshots/yaml_suite_snapshots__yaml_suite_RHX7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: YAML directive without document end marker
  tags: directive error
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n"
  yaml: "---\nkey: value\n%YAML 1.2\n---\n"
