tests/snapshots/yaml_suite_snapshots__yaml_suite_RLU9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "foo:\n- 42\nbar:\n- 44\n"
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/indent.tml"
  json: "{\n  \"foo\": [\n    42\n  ],\n  \"bar\": [\n    44\n  ]\n}\n"
  name: Sequence Indent
  tags: sequence indent
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   +SEQ\n    =VAL :42\n   -SEQ\n   =VAL :bar\n   +SEQ\n    =VAL :44\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo:\n- 42\nbar:\n  - 44\n"
